# glframework

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md
include/glpp/: bsplinesurface.hpp  buffers.hpp  camera.hpp  context.hpp  controls.hpp  draw_batch.hpp  draw_batch.inl.hpp  eventsystem.cpp  eventsystem.hpp  framebuffer.hpp  gl_internal.hpp  imgui.hpp  imgui_ext.hpp  imgui_ext.inl.hpp  imgui_filesystem.hpp  imgui_statistics.hpp  imgui_style.hpp  imgui_vertical_tabs.hpp  intermediate.h  intermediate.inl.h  logging.hpp  map_buffer.hpp  mesh.hpp  meshes.hpp  offscreen_renderer.hpp  openmesh_ext.h  openmesh_ext.hpp  openmesh_mesh.hpp  renderer.hpp  shader_storage_buffer.cpp  (+6 more)
samples/: CMakeLists.txt  immediate_sample.cpp  main.cpp  offscreen_sample.cpp  openmesh_sample.cpp  test-shader.glsl
shaders/: 2d_handles.glsl  2d_selector.glsl  axis.glsl  axis.glsl.h  bsplinesurface.glsl  catmullromspline.glsl  catmullromspline.glsl.h  copyShader.glsl  displayShader.glsl  display_shader.glsl.h  imgui3d.glsl  imgui3d.glsl.h  plane.glsl  pointcloud.glsl  pointcloud.glsl.h  shadeless.glsl  sprite.glsl  testshader.glsl  triangle.glsl  triangle.glsl.h  triangle_normal.glsl  triangle_normal.glsl.h  utils.glsl  vertex.glsl
src/: CmakeLists.txt  bsplinesurface.cpp  buffers.cpp  buffers.hpp  camera.cpp  camera.hpp  context.cpp  controls.cpp  controls.hpp  draw_batch.cpp  draw_batch.hpp  draw_batch.inl.hpp  framebuffer.cpp  framebuffer.hpp  gl_internal.hpp  imgui_ext.cpp  imgui_filesystem.cpp  imgui_statistics.cpp  imgui_style.cpp  imgui_vertical_tabs.cpp  intermediate.cpp  intermediate.h  intermediate.inl.h  logging.cpp  mesh.cpp  mesh.hpp  offscreen_renderer.cpp  offscreen_renderer.hpp  openmesh_ext.h  openmesh_mesh.cpp  openmesh_mesh.h  paged_texture.cpp  pointcloud.cpp  pointcloud.hpp  renderer.cpp  renderer.hpp  shadermanager.cpp  shadermanager.hpp  splinecurves.cpp  splinecurves.hpp  (+5 more)
test/: 2d_test.cpp  CMakeLists.txt  framebuffer_test.cpp  imgui_test.cpp  main.cpp  offscreen_test.cpp  openmesh_test.cpp
(+54 files in other folders)
