add_executable(gl-sample-editor main.cpp)
target_link_libraries(gl-sample-editor PUBLIC glframework)
target_compile_definitions(gl-sample-editor PRIVATE -DSAMPLE_DIR="${PROJECT_SOURCE_DIR}/samples/")
if(${WITH_ASSIMP})	
	add_executable(gl-sample-offscreen offscreen_sample.cpp)
	target_link_libraries(gl-sample-offscreen PUBLIC glframework)
	target_compile_definitions(gl-sample-offscreen PRIVATE -DSAMPLE_DIR="${PROJECT_SOURCE_DIR}/samples/")

	add_executable(gl-sample-immediate immediate_sample.cpp)
	target_link_libraries(gl-sample-immediate PUBLIC glframework)
	target_compile_definitions(gl-sample-immediate PRIVATE -DSAMPLE_DIR="${PROJECT_SOURCE_DIR}/samples/")
endif()
if(${WITH_OPENMESH})
	add_executable(gl-sample-openmesh openmesh_sample.cpp)
	target_link_libraries(gl-sample-openmesh PUBLIC glframework)
	target_compile_definitions(gl-sample-openmesh PRIVATE -DSAMPLE_DIR="${PROJECT_SOURCE_DIR}/samples/")
endif()