add_executable(gl-test main.cpp)
target_link_libraries(gl-test PUBLIC glframework)
if(${WITH_ASSIMP})
	add_executable(gl-test-framebuffer framebuffer_test.cpp)
	target_link_libraries(gl-test-framebuffer PUBLIC glframework)
	target_compile_definitions(gl-test-framebuffer PRIVATE -DTEST_DIR="${PROJECT_SOURCE_DIR}/test/")
	
	add_executable(gl-test-offscreen offscreen_test.cpp)
	target_link_libraries(gl-test-offscreen PUBLIC glframework)
	target_compile_definitions(gl-test-offscreen PRIVATE -DTEST_DIR="${PROJECT_SOURCE_DIR}/test/")
endif()
if(${WITH_OPENMESH})
	add_executable(gl-test-openmesh openmesh_test.cpp)
	target_link_libraries(gl-test-openmesh PUBLIC glframework)
	target_compile_definitions(gl-test-openmesh PRIVATE -DTEST_DIR="${PROJECT_SOURCE_DIR}/test/")
endif()
# add_executable(gl-test-2d 2d_test.cpp)
# target_link_libraries(gl-test-2d PUBLIC glframework)
# target_compile_definitions(gl-test-2d PRIVATE -DTEST_DIR="${PROJECT_SOURCE_DIR}/test/")